<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slug_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/slug_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slug_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/slug_label"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scientific_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/scientific_name_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/slug_label"
        app:layout_constraintTop_toBottomOf="@+id/slug_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scientific_name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/scientific_name_label"
        app:layout_constraintStart_toStartOf="@+id/slug_info"
        app:layout_constraintTop_toBottomOf="@+id/slug_info"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/year_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/scientific_name_label"
        app:layout_constraintTop_toBottomOf="@+id/scientific_name_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/year_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/year_label"
        app:layout_constraintStart_toStartOf="@+id/scientific_name_info"
        app:layout_constraintTop_toBottomOf="@+id/scientific_name_info"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bibliography_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/bibliography_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/year_label"
        app:layout_constraintTop_toBottomOf="@+id/year_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bibliography_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/bibliography_label"
        app:layout_constraintStart_toStartOf="@+id/year_info"
        app:layout_constraintTop_toBottomOf="@+id/year_info"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/author_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/bibliography_label"
        app:layout_constraintTop_toBottomOf="@+id/bibliography_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/author_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/author_label"
        app:layout_constraintStart_toStartOf="@+id/bibliography_info"
        app:layout_constraintTop_toBottomOf="@+id/bibliography_info"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/family_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/family_name_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/author_label"
        app:layout_constraintTop_toBottomOf="@+id/author_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/family_name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/family_name_label"
        app:layout_constraintStart_toStartOf="@+id/author_info"
        app:layout_constraintTop_toBottomOf="@+id/author_info"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/family_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/family_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/family_name_label"
        app:layout_constraintTop_toBottomOf="@+id/family_name_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/family_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/family_label"
        app:layout_constraintStart_toStartOf="@+id/family_name_info"
        app:layout_constraintTop_toBottomOf="@+id/family_name_info"
        tools:text="Evergreens Oak" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/genus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/genus_label"
        android:textColor="@color/light_bg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/family_label"
        app:layout_constraintTop_toBottomOf="@+id/family_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/genus_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/genus_label"
        app:layout_constraintStart_toStartOf="@+id/family_info"
        app:layout_constraintTop_toBottomOf="@+id/family_info"
        tools:text="Evergreens Oak" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>